# gadesktop

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
bridge/: __init__.py  handlers.py  ipc.py  workbench_bridge.py
bridge/tests/: test_handlers.py  test_ipc.py  test_workbench_bridge.py
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_test.rs  m1_writes.rs
core/: Cargo.toml  tauri.conf.json
core/capabilities/: windows.json
core/icons/: icon.icns
core/migrations/: 003_add_message_summary.sql  004_add_messages_fts.sql  005_add_message_preamble.sql  006_messages_origin.sql  007_sessions_origin.sql
core/src/: api.rs  db.rs  discovery.rs  error.rs  ipc.rs  lib.rs  runner_commands.rs  socket_listener.rs
core/tests/: db_test.rs  db_writes_test.rs
desktop/: package.json  pnpm-lock.yaml
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  windows.json
desktop/src-tauri/experiments/bridge-owner/: README.md  main.rs  registry.rs  results.md
desktop/src-tauri/migrations/: 001_init.sql
desktop/src-tauri/src/: lib.rs
docs/: DESIGN.md  PRD.md  agent-api.md  ipc-protocol.md  release-workflow.md  windows-build-checklist.md
docs/GenericAgent Workbench-handoff/: README.md
docs/devlog/: 2026-05-07-design-direction-pivot.md  2026-05-07-stage1-bridge-poc-complete.md  2026-05-08-design-trio-finale.md  2026-05-09-stage3-end-to-end-and-ux-polish.md  2026-05-12-dogfood-polish-marathon.md  2026-05-13-ga-baseline-upgrade-cf65515-to-6bb3104.md  2026-05-13-llm-warmup-bridge.md  2026-05-13-project-cwd-copy-and-live-sync-deferred.md  2026-05-13-scroll-on-completion-deferred.md  2026-05-13-ui-copy-i18n-and-brand-sweep.md  2026-05-15-release-ci-menubar-icon-screenshots.md  2026-05-15-v0.1-alpha.2-windows-attach-fixes.md  2026-05-15-v0.1-prod-dogfood-fixes.md  README.md  (+5 more)
gui/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
runner/: __init__.py  handlers.py  workbench_bridge.py
scripts/: bundle-python.sh  perf-galley.py  rename-artifact.sh
(+139 files in other folders)
